# YOLO-V8-PCB

./: README.md  pyproject.toml  requirements.txt
configs/: pcb_dataset.yaml  train_config.yaml
src/: analyzer.py  app.py  inference.py  prepare_dataset.py  preprocess.py  train.py
