[project]
name = "pcb-defect-detection"
version = "1.0.0"
description = "基於 YOLOv8 + OpenCV + PyTorch 的 PCB 瑕疵與錫膏自動化品質檢測系統"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Tien-Wei Hsu" },
]

dependencies = [
    # 核心深度學習框架
    "torch>=2.0.0",
    "torchvision>=0.15.0",

    # YOLOv8 (Ultralytics)
    "ultralytics>=8.0.0",

    # 影像處理
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "albumentations>=1.3.0",

    # 資料處理
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",

    # GUI 介面
    "gradio>=4.0.0",

    # 資料集下載與管理
    "gdown>=4.7.0",
    "roboflow>=1.1.0",

    # 工具套件
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",

    # 報告與視覺化
    "tensorboard>=2.13.0",
]

[project.optional-dependencies]
export = [
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]

# 告訴 uv 這不是一個需要打包的套件，只管理依賴即可
[tool.uv]
package = false

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
